# claude-code-switch

./: .env.example  .gitignore  API接口文档.md  CLAUDE.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  alembic.ini  config.yaml  deploy.sh  docker-compose.quick.yml  docker-compose.simple.yml  docker-compose.yml  install_and_run.sh  prometheus.yml  pyproject.toml  requirements.txt  run.py  start.sh  使用说明.md  计划文档.md
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  main.py
app/api/: admin.py  deps.py  proxy.py  usage.py  web.py
app/core/: __init__.py  config.py  logging.py  metrics.py  security.py  yaml_config.py
app/db/: base.py
app/middleware/: __init__.py  metrics.py
app/models/: __init__.py  api_key.py  usage_log.py
app/schemas/: __init__.py  api_key.py  usage.py
app/services/: api_key_service.py  proxy_service.py  token_counter.py  usage_log_service.py
app/static/css/: dashboard.css  main.css
app/static/js/: main.js
app/templates/: base.html  index.html  user_login.html
app/templates/admin/: dashboard.html  keys.html  login.html
app/templates/dashboard/: index.html  logs.html  stats.html  user_dashboard.html
